# LLamina

./: .env.example  .gitignore  CHANGELOG.md  README.md  example.config.yaml  pyproject.toml
app/: main.py  model_control_api.py
app/api/: lmstudio_v0.py  model_switcher.py  openai_v1.py
app/core/: config.py  proxy.py
