[tool.poetry]
name = "llamina"
version = "0.1.0"
description = "Minimaler LM-Studio Proxy"
authors = ["Philipp Heise <philipp.heise@il-kg.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.0"
pydantic-settings = "^2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
